# atlas

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  amazon-build  flash-amazon  flash-calibration  flash-test-then-module
firmware/calibration/: CMakeLists.txt  main.cpp
firmware/common/: atlas_common.h  atlas_configuration.cpp  board_definition.cpp  board_definition.h  ezo_atlas.cpp  ezo_atlas.h  oem_atlas.cpp  oem_atlas.h
firmware/module/: CMakeLists.txt  arduino-libraries  atlas-hardware.h  atlas.cpp  atlas.h  atlas_configuration.h  atlas_fsm.cpp  atlas_fsm.h  atlas_hardware.h  atlas_module.cpp  atlas_module.h  atlas_reader.cpp  atlas_sensor_collection.cpp  atlas_sensor_collection.h  attached_sensors.cpp  attached_sensors.h  configure_atlas.cpp  configure_atlas.h  custom_atlas_query.cpp  custom_atlas_query.h  dependencies.sd  exceptions.cpp  leds.h  logging.cpp  logging.h  main.cpp  module.cpp  sensor_power.cpp  sensor_power.h  sensors.cpp  sensors.h  take_atlas_readings.cpp  take_atlas_readings.h
firmware/test/: CMakeLists.txt  Makefile  arduino-libraries  dependencies.sd  main.cpp  test.cpp  test.ino
hardware/: atlas_oem_footprint.dxf  fk-atlas-all.csv  fk-atlas-cache.lib  fk-atlas-rescue.lib  fk-atlas.bak  fk-atlas.csv  fk-atlas.kicad_pcb  fk-atlas.kicad_pcb-bak  fk-atlas.net  fk-atlas.pro  fk-atlas.sch  fp-lib-table  isolated_atlas0.sch  isolated_atlas1.sch  isolated_atlas2.sch  isolated_atlas3.sch  isolated_atlas4.sch  sym-lib-table
hardware/gerbers/: fk-atlas-B.Cu.gbr  fk-atlas-B.Mask.gbr  fk-atlas-B.Paste.gbr  fk-atlas-B.SilkS.gbr  fk-atlas-F.Cu.gbr  fk-atlas-F.Mask.gbr  fk-atlas-F.Paste.gbr  fk-atlas-F.SilkS.gbr  fk-atlas-GND.gbr  fk-atlas-NPTH.drl  fk-atlas-PTH.drl  fk-atlas-PWR.gbr  fk-atlas.drl
hardware/gerbers/v0.10/: fk-atlas-B.SilkS.gbr  fk-atlas-F.Cu.gbr  fk-atlas-F.Mask.gbr  fk-atlas-F.SilkS.gbr  fk-atlas.drl
hardware/gerbers/v0.11/: fk-atlas-B.Cu.gbr  fk-atlas-B.Mask.gbr  fk-atlas-B.Paste.gbr  fk-atlas-B.SilkS.gbr  fk-atlas-Edge.Cuts.gbr  fk-atlas-F.Cu.gbr  fk-atlas-F.Mask.gbr  fk-atlas-F.Paste.gbr  fk-atlas-F.SilkS.gbr  fk-atlas-GND.gbr  fk-atlas-PWR.gbr  fk-atlas.drl
hardware/panelized/: fk-atlas-v0.11-01x02.kicad_pcb  fk-atlas-v0.11-01x02.kicad_pcb-bak
hardware/panelized/gerbers/v0.11/: fk-atlas-v0.11-01x02-B.Cu.gbr  fk-atlas-v0.11-01x02-B.Mask.gbr  fk-atlas-v0.11-01x02-B.Paste.gbr  fk-atlas-v0.11-01x02-B.SilkS.gbr  fk-atlas-v0.11-01x02-Edge.Cuts.gbr  fk-atlas-v0.11-01x02-F.Cu.gbr  fk-atlas-v0.11-01x02-F.Mask.gbr  fk-atlas-v0.11-01x02-F.Paste.gbr  fk-atlas-v0.11-01x02-F.SilkS.gbr  fk-atlas-v0.11-01x02-GND.gbr  fk-atlas-v0.11-01x02-PWR.gbr  fk-atlas-v0.11-01x02.drl
hardware/rescue-backup/: fk-atlas-2018-07-25-10-00-06.pro  fk-atlas-2018-07-25-10-00-06.sch  fk-atlas-cache-2018-07-25-10-00-06.lib  isolated_atlas4-2018-07-25-10-00-06.sch
protocol/: Makefile  README.org  fk-atlas.pb.go  fk-atlas.proto  fk-atlas.proto.json  package.json
protocol/src/: fk-atlas.pb.c  fk-atlas.pb.h
